--- a/portfolio-pages/web-design/web-design-portfolio-partical-slider-in-layout.html
+++ b/portfolio-pages/web-design/web-design-portfolio-partical-slider-in-layout.html
@@ -97,9 +97,25 @@
       </div>
     </header>
 
-    <main>
+    <main class="ind-portfolio-page-content">
+
+
       <section id="portfolio-illustration">
         <div class="dev-portflio-itm-spacing">
+
+          <div class="portfolio-description">
+                    <div class="project-title">
+                      <h3>project: partical slider</h3>
+                    </div>
+                    <div>
+                      <p>A designer found this effect on a site and wanted me to recreate it. I did not write the base script. However, I learned how to refactor it and continue to study this piece. The first thing I learned from this was how to create and leverage base64 data-URIs.</p>
+                      <p>This is set up for desktop.</p>
+                      <p>
+                      The partical slider is just a fun piece to have open on your desktop and mess around with.
+                      </p>
+
+                    </div>
+                </div>
 
 
 
