--- a/portfolio-pages/web-design/web-design-portfolio-two-up-slide-show.html
+++ b/portfolio-pages/web-design/web-design-portfolio-two-up-slide-show.html
@@ -101,9 +101,20 @@
       </div>
     </header>
 
-    <main>
+    <main class="ind-portfolio-page-content">
       <section id="portfolio-illustration">
         <div class="dev-portflio-itm-spacing">
+
+          <div class="portfolio-description">
+                    <div class="project-title">
+                      <h3>project: two-up slideshow</h3>
+                    </div>
+                    <div>
+                      <p>A client tasked me with recreating a two up slideshow that fades out on each side at different times.</p>
+                      <p>We went with a standard auto carousel for the mobile experience.</p>
+
+                    </div>
+                </div>
 
 
 
